Fixed rendering bug where page rendered content off screen

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,22 +12,3 @@
  *= require colorpicker.css.scss
  *= require_tree .
  */
-
-header {
-  background-color: yellow;
-  width: 100%;
-  height: 3em;
-  position: fixed;
-  left: 0;
-  top: 0;
-  overflow: auto;
-}
-
-#content, .notice, .alert {
-  margin-top: 3.5em;
-  background-color: #bdc3c7;
-}
-
-#content {
-  overflow: auto;
-}
