--- a/app/assets/stylesheets/root.css.scss
+++ b/app/assets/stylesheets/root.css.scss
@@ -1,3 +1,27 @@
 // Place all the styles related to the Root controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+  font-family: Garamond;
+}
+
+#content, .notice, .alert {
+  margin-top: 3.5em;
+  background-color: #bdc3c7;
+}
+
+#content {
+  overflow: auto;
+}
+
+header {
+  background-color: yellow;
+  width: 100%;
+  height: 3em;
+  position: fixed;
+  left: 0;
+  top: 0;
+  overflow: auto;
+  z-index: 9999999;
+}
